@@ -377,6 +377,33 @@ public class CircuitComponent extends JComponent implements ChangedListener, Lib
             }
         }.setAccelerator("T").enableAcceleratorIn(this);
 
+        new ToolTipAction("pipetteCopy") {
+            @Override
+            public void actionPerformed(ActionEvent actionEvent) {
+                if (activeMouseController == mouseNormal) {
+                    VisualElement ve = getActualVisualElement();
+                    if (ve != null) {
+                        // Insert a copy of the element, retaining the attributes.
+                        setPartToInsert(new VisualElement(ve));
+                    }
+                }
+            }
+        }.setAccelerator("Q").enableAcceleratorIn(this);
+
+        new ToolTipAction("pipette") {
+            @Override
+            public void actionPerformed(ActionEvent actionEvent) {
+                if (activeMouseController == mouseNormal) {
+                    VisualElement ve = getActualVisualElement();
+                    if (ve != null) {
+                        // Insert the element using default attributes.
+                        VisualElement insert = new VisualElement(ve.getElementName()).setShapeFactory(shapeFactory);
+                        setPartToInsert(insert);
+                    }
+                }
+            }
+        }.setAcceleratorCTRLplus("Q").enableAcceleratorIn(this);
+
         ToolTipAction plus = new PlusMinusAction(1).setAccelerator("PLUS").enableAcceleratorIn(this);
         getInputMap().put(KeyStroke.getKeyStroke(KeyEvent.VK_ADD, 0), plus);
 
